# vitok-release

./: .gitignore  CLAUDE.md  COMPILE_INT8_RESEARCH.md  README.md  TESTING.md  modal_test_compat.py  modal_test_release.py  pyproject.toml
benchmarks/: benchmark_full_train.py  benchmark_mfu.py
demo/: README.md  app.py  requirements.txt
docs/: EVAL_SUMMARY.md  FLEX_ATTENTION_PLAN.md  index.html
examples/: dit_generation.py  encode_decode.py  eval_dit.py  eval_vae.py  train_dit.py  train_vae.py
examples/configs/: generic_tar.py  imagenet_streaming.py
modal/: __init__.py  env.py  test_ae_gpu.py  test_dit_gpu.py
modal_tests/: benchmark_mfu.py  test_ae_gpu.py  test_all.py  test_data.py  test_dit_gpu.py
scripts/: benchmark_quant.py  benchmark_quant_train.py  check_weights.py  create_bfl_figure.py  create_eval_report.py  eval_dit.py  eval_vae.py  generate_comparisons.py  modal_config.py  modal_test_flex.py  modal_train_vae.py  run_div8k_8192_nofp8.sh  run_div8k_f16_retry.sh  run_div8k_rerun.sh  run_div8k_sweep.sh  run_vitok_bfl.py  sample_dit.py  test_flex_attn.py  train_dit.py  train_vae.py
scripts/eval/: __init__.py  baselines.py  generate_blog_visuals.py  generate_tables.py  plot_dit_curves.py  plot_results.py  process_visuals.py  visuals.py
scripts/modal/: MODAL_SETUP.md  README.md  batch_eval.py  clean_and_upload_from_volume.py  clean_weights.py  cleanup_volume.py  download_4k_images.py  download_checkpoints.py  download_gdrive.py  download_gdrive_rclone.py  eval_vae.py  inference.py  install_eval_datasets.sh  modal_config.py  setup_data.py  setup_env.py  (+5 more)
tests/: conftest.py  test_ae_compatibility.py  test_data_stream.py  test_dit.py  test_examples.py  test_pp.py  test_pp_visual.py  test_tile_sampler.py  test_unipc.py
vitok/: __init__.py  ae.py  data.py  dit.py  metrics.py  naflex.py  naflex_io.py  pretrained.py  training_utils.py  utils.py  video.py
(+61 files in other folders)
